--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   animated_text_kit: ^4.2.2
   cloud_firestore: ^4.12.2
   firebase_auth: ^4.12.1
+  modal_progress_hud_nsn: ^0.4.0
 
 dev_dependencies:
   flutter_test:
