--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cloud_firestore: ^4.12.2
   firebase_auth: ^4.12.1
   modal_progress_hud_nsn: ^0.4.0
+  google_fonts: ^6.1.0
 
 dev_dependencies:
   flutter_test:
